<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/picker_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <View
            android:id="@+id/picker_top_border"
            style="@style/AppWidget.DeepLine"
            android:layout_alignParentTop="true" />

        <RelativeLayout
            android:id="@+id/picker_opt_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/picker_top_border"
            android:background="?attr/widgetBackground"
            android:gravity="center_vertical"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="48dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/red_btn"
                android:gravity="center"
                android:text="@string/picker_cancel"
                android:textColor="?android:textColorSecondary"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/btn_first"
                android:layout_width="48dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/btn_cancel"
                android:background="@drawable/purple_btn"
                android:gravity="center"
                android:text="@string/picker_first"
                android:textColor="?android:textColorSecondary"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/btn_last"
                android:layout_width="48dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="20dp"
                android:layout_toLeftOf="@+id/btn_jump"
                android:background="@drawable/purple_btn"
                android:gravity="center"
                android:text="@string/picker_end"
                android:textColor="?android:textColorSecondary"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/btn_jump"
                android:layout_width="48dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:background="@drawable/red_blue_btn"
                android:gravity="center"
                android:text="@string/picker_jump"
                android:textColor="?android:textColorSecondary"
                android:textSize="15sp"/>

        </RelativeLayout>

        <View
            android:id="@+id/picker_bottom_border"
            style="@style/AppWidget.DeepLine"
            android:layout_below="@+id/picker_opt_container" />

        <com.cgy.hupu.widget.MaterialNumberPicker
            android:id="@+id/picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/picker_bottom_border"
            app:npBackground="?attr/widgetBackground"
            app:npSeparatorColor="@color/colorAccent"
            app:npTextColor="@color/colorPrimary"
            app:npTextSize="16sp"
            app:npWrapValue="true" />

    </RelativeLayout>

</FrameLayout>